refactor: booking feat